# MLIT-Summary-Bot

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: mlit-summary.yml
src/: mlit_summary.py
