[project]
name = "mlit-summary-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.73.0",
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.5",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "slack-sdk>=3.38.0",
]
